--- a/frontend/bookstores-angular/package.json
+++ b/frontend/bookstores-angular/package.json
@@ -3,11 +3,11 @@
   "version": "0.0.1",
   "scripts": {
     "ng": "ng",
-    "config":"npm install",
+    "config": "npm install",
     "start": "npm run doc:generate && ng serve -o",
-    "doc":"npm run doc:generate && npm run doc:server",
-    "doc:generate":"compodoc -p ./tsconfig.doc.json",
-    "doc:server":"compodoc -s -o ./tsconfig.doc.json -o",
+    "doc": "npm run doc:generate && npm run doc:server",
+    "doc:generate": "compodoc -p ./tsconfig.doc.json",
+    "doc:server": "compodoc -s -o ./tsconfig.doc.json -o",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
@@ -16,18 +16,26 @@
   },
   "private": true,
   "dependencies": {
+    "@angular-architects/module-federation": "^18.0.6",
+    "@angular-architects/module-federation-tools": "^18.0.6",
     "@angular/animations": "^18.2.0",
     "@angular/common": "^18.2.0",
     "@angular/compiler": "^18.2.0",
     "@angular/core": "^18.2.0",
+    "@angular/flex-layout": "^15.0.0-beta.42",
     "@angular/forms": "^18.2.0",
+    "@angular/material": "^18.2.13",
     "@angular/platform-browser": "^18.2.0",
     "@angular/platform-browser-dynamic": "^18.2.0",
     "@angular/platform-server": "^18.2.0",
     "@angular/router": "^18.2.0",
     "@angular/ssr": "^18.2.5",
+    "@fortawesome/fontawesome-free": "^6.6.0",
     "@sentry/cli": "^2.38.2",
+    "angular2-text-mask": "^9.0.0",
     "express": "^4.18.2",
+    "ngx-mask": "^18.0.4",
+    "ngx-toastr": "^19.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.10"
@@ -39,7 +47,7 @@
     "@types/express": "^4.17.17",
     "@types/jasmine": "~5.1.0",
     "@types/node": "^18.18.0",
-    "compodoc": "^0.0.41",
+    "compodoc": "^0.0.6",
     "jasmine-core": "~5.2.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
